tenants/mia/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mia
  labels:
    zave.io/workload: mia
    zave.io/tenant: "true"
