tenants/mia/canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mia-canary
  namespace: mia
  labels:
    app: mia-canary
    app.kubernetes.io/name: mia
    app.kubernetes.io/component: canary
    zave.io/workload: mia
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 18789
    protocol: TCP
    name: http
  selector:
    app: mia-canary
