tenants/mia/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mia
  namespace: mia
  labels:
    app: mia
    zave.io/workload: mia
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: mia
